--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,5 +12,11 @@
 	},
 	"observability": {
     "enabled": true
-  }
+  },
+  "routes": [
+    {
+      "pattern": "kelas10sifp.my.id",
+      "custom_domain": true
+    }
+  ]
 }
